feat: Inject API key via Netlify build
Configure `netlify.toml` to use `sed` during the build process to replace a placeholder `API_KEY` in `index.html` with the actual Netlify environment variable. This enables dynamic API key injection for the client-side application. Update `App.tsx` to correctly access and validate the environment variable.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 
 [build]
-  command = "echo 'Building WORM GPT Native...'"
+  # Perintah ini akan mengganti text 'REPLACE_WITH_NETLIFY_KEY' di index.html dengan value dari Environment Variable 'API_KEY'
+  # Pastikan Anda sudah set 'API_KEY' di Netlify -> Site Settings -> Environment Variables
+  command = "sed -i \"s|REPLACE_WITH_NETLIFY_KEY|${API_KEY}|g\" index.html"
   publish = "."
 
 [[redirects]]
